Fixed wrong menu service id.

--- a/src/Stsbl/InternetBundle/Resources/config/services.yml
+++ b/src/Stsbl/InternetBundle/Resources/config/services.yml
@@ -31,7 +31,7 @@ services:
         tags:
             - { name: validator.constraint_validator, alias: stsbl_internet_nac_validator }
     
-    stsbl.filedistribution.menu:
+    stsbl.internet.menu:
         class: Stsbl\InternetBundle\EventListener\MenuListener # Out MenuListener Class
         arguments: ["@iserv.config"]
         tags:
