Renamed package from "Internet" to "Internetfreigabe".

--- a/debian/control
+++ b/debian/control
@@ -8,6 +8,6 @@ Standards-Version: 3.9.5
 Package: stsbl-iserv3-internet
 Architecture: all
 Depends: iserv-internet
-Description: IServ 3: Internet
+Description: IServ 3: Internetfreigabe
  Dieses Paket enthält die Oberfläche zur Eingabe und Verwaltung von NACs in IServ 3.
 Tag: suite::iserv:portal, role::plugin
