--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: stsbl-iserv3-internet
 Section: misc
 Priority: extra
 Maintainer: Stadtteilschule Blankenese <repository@stsbl.de>
-Build-Depends: debhelper (>= 9)
+Build-Depends: debhelper (>= 9), iserv3-dev
 Standards-Version: 3.9.5
 
 Package: stsbl-iserv3-internet
