Fixed too long extended description.

--- a/debian/control
+++ b/debian/control
@@ -9,5 +9,6 @@ Package: stsbl-iserv3-internet
 Architecture: all
 Depends: iserv-internet, iserv3-host
 Description: IServ 3: Internetfreigabe
- Dieses Paket enthält die Oberfläche zur Eingabe und Verwaltung von NACs in IServ 3.
+ Dieses Paket enthält die Oberfläche zur Eingabe und Verwaltung von NACs
+ in IServ 3.
 Tag: suite::iserv:portal, role::plugin
