Fixed deprecation and removed superflous object manager

--- a/src/Stsbl/InternetBundle/Resources/config/legacy_aliases.yml
+++ b/src/Stsbl/InternetBundle/Resources/config/legacy_aliases.yml
@@ -2,7 +2,7 @@
 services:
     _defaults:
         autoconfigure: false
-        autoconfigure: false
+        autowire: false
         public: true
 
     stsbl.internet.nac_manager: '@Stsbl\InternetBundle\Service\NacManager'
