--- a/debian/control
+++ b/debian/control
@@ -3,7 +3,7 @@ Section: misc
 Priority: extra
 Maintainer: Stadtteilschule Blankenese <repository@stsbl.de>
 Build-Depends: debhelper (>= 10), iserv3-dev
-Build-Depends-Indep: iserv3-dev
+Build-Depends-Indep: iserv-buildtools
 Standards-Version: 4.1.3
 
 Package: stsbl-iserv3-internet
