--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ debian/stsbl-iserv3-internet.substvars
 debian/stsbl-iserv3-internet.debhelper.log
 debian/files
 debian/debhelper-build-stamp
+/Makefile.iservmake
+/locale
+/system-locale
+!/locale/templates/*_misc.pot
